project('SDLTTF','c',
  version: '1.0.0',
  default_options : [ 'default_library=static', 'buildtype=release'],
)

# SDLTTF Core sources

SDLTTFSrc =  [
  'SDL_ttf.c',
  'showfont.c',
  'external/harfbuzz/src/failing-alloc.c',
  'external/harfbuzz/util/hb-fc-list.c',
  'external/freetype/src/pcf/pcfdrivr.c',
  'external/freetype/src/pcf/pcf.c',
  'external/freetype/src/pcf/pcfutil.c',
  'external/freetype/src/pcf/pcfread.c',
  'external/freetype/src/dlg/dlgwrap.c',
  'external/freetype/src/pfr/pfrcmap.c',
  'external/freetype/src/pfr/pfrdrivr.c',
  'external/freetype/src/pfr/pfrsbit.c',
  'external/freetype/src/pfr/pfrgload.c',
  'external/freetype/src/pfr/pfr.c',
  'external/freetype/src/pfr/pfrobjs.c',
  'external/freetype/src/pfr/pfrload.c',
  'external/freetype/src/psaux/psfont.c',
  'external/freetype/src/psaux/psobjs.c',
  'external/freetype/src/psaux/t1decode.c',
  'external/freetype/src/psaux/pshints.c',
  'external/freetype/src/psaux/psauxmod.c',
  'external/freetype/src/psaux/psblues.c',
  'external/freetype/src/psaux/psft.c',
  'external/freetype/src/psaux/psarrst.c',
  'external/freetype/src/psaux/t1cmap.c',
  'external/freetype/src/psaux/cffdecode.c',
  'external/freetype/src/psaux/afmparse.c',
  'external/freetype/src/psaux/psintrp.c',
  'external/freetype/src/psaux/pserror.c',
  'external/freetype/src/psaux/psstack.c',
  'external/freetype/src/psaux/psread.c',
  'external/freetype/src/psaux/psconv.c',
  'external/freetype/src/psaux/psaux.c',
  'external/freetype/src/lzw/ftzopen.c',
  'external/freetype/src/lzw/ftlzw.c',
  'external/freetype/src/pshinter/pshinter.c',
  'external/freetype/src/pshinter/pshrec.c',
  'external/freetype/src/pshinter/pshglob.c',
  'external/freetype/src/pshinter/pshalgo.c',
  'external/freetype/src/pshinter/pshmod.c',
  'external/freetype/src/smooth/ftgrays.c',
  'external/freetype/src/smooth/ftsmooth.c',
  'external/freetype/src/smooth/smooth.c',
  'external/freetype/src/bzip2/ftbzip2.c',
  'external/freetype/src/type1/t1afm.c',
  'external/freetype/src/type1/t1objs.c',
  'external/freetype/src/type1/type1.c',
  'external/freetype/src/type1/t1driver.c',
  'external/freetype/src/type1/t1parse.c',
  'external/freetype/src/type1/t1load.c',
  'external/freetype/src/type1/t1gload.c',
  'external/freetype/src/raster/ftraster.c',
  'external/freetype/src/raster/ftrend1.c',
  'external/freetype/src/raster/raster.c',
  'external/freetype/src/svg/ftsvg.c',
  'external/freetype/src/svg/svg.c',
  'external/freetype/src/cff/cffobjs.c',
  'external/freetype/src/cff/cffgload.c',
  'external/freetype/src/cff/cffdrivr.c',
  'external/freetype/src/cff/cff.c',
  'external/freetype/src/cff/cffload.c',
  'external/freetype/src/cff/cffparse.c',
  'external/freetype/src/cff/cffcmap.c',
  'external/freetype/src/gzip/ftgzip.c',
  'external/freetype/src/gzip/inflate.c',
  'external/freetype/src/gzip/adler32.c',
  'external/freetype/src/gzip/inftrees.c',
  'external/freetype/src/gzip/crc32.c',
  'external/freetype/src/gzip/inffast.c',
  'external/freetype/src/gzip/zutil.c',
  'external/freetype/src/winfonts/winfnt.c',
  'external/freetype/src/type42/type42.c',
  'external/freetype/src/type42/t42parse.c',
  'external/freetype/src/type42/t42drivr.c',
  'external/freetype/src/type42/t42objs.c',
  'external/freetype/src/otvalid/otvcommn.c',
  'external/freetype/src/otvalid/otvgpos.c',
  'external/freetype/src/otvalid/otvjstf.c',
  'external/freetype/src/otvalid/otvmath.c',
  'external/freetype/src/otvalid/otvgsub.c',
  'external/freetype/src/otvalid/otvalid.c',
  'external/freetype/src/otvalid/otvmod.c',
  'external/freetype/src/otvalid/otvbase.c',
  'external/freetype/src/otvalid/otvgdef.c',
  'external/freetype/src/tools/vms_shorten_symbol.c',
  'external/freetype/src/tools/test_bbox.c',
  'external/freetype/src/tools/test_afm.c',
  'external/freetype/src/tools/apinames.c',
  'external/freetype/src/tools/test_trig.c',
  'external/freetype/src/tools/ftrandom/ftrandom.c',
  'external/freetype/src/sfnt/ttmtx.c',
  'external/freetype/src/sfnt/sfdriver.c',
  'external/freetype/src/sfnt/sfnt.c',
  'external/freetype/src/sfnt/sfwoff2.c',
  'external/freetype/src/sfnt/ttkern.c',
  'external/freetype/src/sfnt/ttcolr.c',
  'external/freetype/src/sfnt/ttsvg.c',
  'external/freetype/src/sfnt/woff2tags.c',
  'external/freetype/src/sfnt/ttload.c',
  'external/freetype/src/sfnt/sfwoff.c',
  'external/freetype/src/sfnt/ttsbit.c',
  'external/freetype/src/sfnt/ttpost.c',
  'external/freetype/src/sfnt/ttcpal.c',
  'external/freetype/src/sfnt/sfobjs.c',
  'external/freetype/src/sfnt/pngshim.c',
  'external/freetype/src/sfnt/ttcmap.c',
  'external/freetype/src/sfnt/ttbdf.c',
  'external/freetype/src/gxvalid/gxvopbd.c',
  'external/freetype/src/gxvalid/gxvfeat.c',
  'external/freetype/src/gxvalid/gxvprop.c',
  'external/freetype/src/gxvalid/gxvfgen.c',
  'external/freetype/src/gxvalid/gxvmort1.c',
  'external/freetype/src/gxvalid/gxvmort4.c',
  'external/freetype/src/gxvalid/gxvkern.c',
  'external/freetype/src/gxvalid/gxvmort2.c',
  'external/freetype/src/gxvalid/gxvmorx.c',
  'external/freetype/src/gxvalid/gxvmort5.c',
  'external/freetype/src/gxvalid/gxvtrak.c',
  'external/freetype/src/gxvalid/gxvbsln.c',
  'external/freetype/src/gxvalid/gxvmorx1.c',
  'external/freetype/src/gxvalid/gxvmorx2.c',
  'external/freetype/src/gxvalid/gxvlcar.c',
  'external/freetype/src/gxvalid/gxvmort0.c',
  'external/freetype/src/gxvalid/gxvmorx5.c',
  'external/freetype/src/gxvalid/gxvmod.c',
  'external/freetype/src/gxvalid/gxvmort.c',
  'external/freetype/src/gxvalid/gxvalid.c',
  'external/freetype/src/gxvalid/gxvmorx4.c',
  'external/freetype/src/gxvalid/gxvcommn.c',
  'external/freetype/src/gxvalid/gxvmorx0.c',
  'external/freetype/src/gxvalid/gxvjust.c',
  'external/freetype/src/sdf/ftsdfcommon.c',
  'external/freetype/src/sdf/sdf.c',
  'external/freetype/src/sdf/ftsdf.c',
  'external/freetype/src/sdf/ftsdfrend.c',
  'external/freetype/src/sdf/ftbsdf.c',
  'external/freetype/src/base/ftglyph.c',
  'external/freetype/src/base/md5.c',
  'external/freetype/src/base/ftdbgmem.c',
  'external/freetype/src/base/ftgloadr.c',
  'external/freetype/src/base/ftbase.c',
  'external/freetype/src/base/ftbbox.c',
  'external/freetype/src/base/ftlcdfil.c',
  'external/freetype/src/base/ftcolor.c',
  'external/freetype/src/base/ftgasp.c',
  'external/freetype/src/base/ftpatent.c',
  'external/freetype/src/base/ftsystem.c',
  'external/freetype/src/base/ftotval.c',
  'external/freetype/src/base/ftstroke.c',
  'external/freetype/src/base/fthash.c',
  'external/freetype/src/base/ftpsprop.c',
  'external/freetype/src/base/ftobjs.c',
  'external/freetype/src/base/fterrors.c',
  'external/freetype/src/base/ftrfork.c',
  'external/freetype/src/base/ftwinfnt.c',
  'external/freetype/src/base/ftutil.c',
  'external/freetype/src/base/ftfntfmt.c',
  'external/freetype/src/base/ftcalc.c',
  'external/freetype/src/base/fttrigon.c',
  'external/freetype/src/base/ftmm.c',
  'external/freetype/src/base/ftcid.c',
  'external/freetype/src/base/ftstream.c',
  'external/freetype/src/base/ftdebug.c',
  'external/freetype/src/base/fttype1.c',
  'external/freetype/src/base/ftbdf.c',
  'external/freetype/src/base/ftsynth.c',
  'external/freetype/src/base/ftoutln.c',
  'external/freetype/src/base/ftmac.c',
  'external/freetype/src/base/ftpfr.c',
  'external/freetype/src/base/ftfstype.c',
  'external/freetype/src/base/ftadvanc.c',
  'external/freetype/src/base/ftinit.c',
  'external/freetype/src/base/ftgxval.c',
  'external/freetype/src/base/ftsnames.c',
  'external/freetype/src/base/ftbitmap.c',
  'external/freetype/src/psnames/psnames.c',
  'external/freetype/src/psnames/psmodule.c',
  'external/freetype/src/truetype/ttgload.c',
  'external/freetype/src/truetype/ttdriver.c',
  'external/freetype/src/truetype/ttpload.c',
  'external/freetype/src/truetype/ttinterp.c',
  'external/freetype/src/truetype/ttgxvar.c',
  'external/freetype/src/truetype/truetype.c',
  'external/freetype/src/truetype/ttobjs.c',
  'external/freetype/src/autofit/afindic.c',
  'external/freetype/src/autofit/afloader.c',
  'external/freetype/src/autofit/afshaper.c',
  'external/freetype/src/autofit/afdummy.c',
  'external/freetype/src/autofit/ft-hb.c',
  'external/freetype/src/autofit/afmodule.c',
  'external/freetype/src/autofit/afblue.c',
  'external/freetype/src/autofit/afranges.c',
  'external/freetype/src/autofit/afglobal.c',
  'external/freetype/src/autofit/afcjk.c',
  'external/freetype/src/autofit/autofit.c',
  'external/freetype/src/autofit/afhints.c',
  'external/freetype/src/autofit/aflatin.c',
  'external/freetype/src/bdf/bdflib.c',
  'external/freetype/src/bdf/bdf.c',
  'external/freetype/src/bdf/bdfdrivr.c',
  'external/freetype/src/cid/cidriver.c',
  'external/freetype/src/cid/type1cid.c',
  'external/freetype/src/cid/cidobjs.c',
  'external/freetype/src/cid/cidload.c',
  'external/freetype/src/cid/cidgload.c',
  'external/freetype/src/cid/cidparse.c',
  'external/freetype/src/cache/ftcimage.c',
  'external/freetype/src/cache/ftcmru.c',
  'external/freetype/src/cache/ftcmanag.c',
  'external/freetype/src/cache/ftcsbits.c',
  'external/freetype/src/cache/ftccmap.c',
  'external/freetype/src/cache/ftcache.c',
  'external/freetype/src/cache/ftccache.c',
  'external/freetype/src/cache/ftcbasic.c',
  'external/freetype/src/cache/ftcglyph.c',
  'external/freetype/builds/amiga/src/base/ftsystem.c',
  'external/freetype/builds/amiga/src/base/ftdebug.c',
  'external/freetype/builds/vms/ftsystem.c',
  'external/freetype/builds/unix/ftsystem.c',
  'external/freetype/builds/wince/ftdebug.c',
  'external/freetype/builds/windows/ftsystem.c',
  'external/freetype/builds/windows/ftdebug.c',
  'external/freetype/builds/mac/ftmac.c',
  'glfont.c',
]

SDLTTFIncludeDirs = [
  '.',
]

SDLTTFCompileArgs = [
  '-fPIC'
]

# SDLTTF Dependency

 SDLTTFDependency = declare_dependency(
  compile_args        : [  SDLTTFCompileArgs ],
  link_args           : [  ],
  include_directories : include_directories(SDLTTFIncludeDirs),
  sources             : [ SDLTTFSrc ],
  dependencies        : [  
                        ]
 )

# Library

SDLTTFLibrary = library('SDLTTF', dependencies: [ SDLTTFDependency] )